<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_10"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTypeOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/tv_border"
            android:gravity="center"
            android:padding="@dimen/padding_04"
            android:text="@string/n"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_16" />

        <TextView
            android:id="@+id/tvSub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="@dimen/margin_04"
            android:layout_marginLeft="@dimen/margin_04"
            android:layout_marginTop="@dimen/margin_04"
            android:layout_weight="1"
            android:text="@string/guac_de_la_costa"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_16" />

        <LinearLayout
            android:id="@+id/llAdd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/padding_08"
                android:text="@string/add"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_16" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCount"
            android:visibility="gone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_border">

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_add_24" />


            <TextView
                android:id="@+id/tvCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_08"
                android:text="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_16" />

            <ImageView
                android:id="@+id/ivMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_remove_24" />


        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_02"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTypeTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:background="@drawable/tv_border"
            android:gravity="center"
            android:padding="@dimen/padding_04"
            android:text="@string/d"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_16" />

        <TextView
            android:id="@+id/tvSub_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_toRightOf="@id/tvTypeTwo"
            android:layout_marginStart="@dimen/margin_04"
            android:layout_marginLeft="@dimen/margin_04"
            android:text="@string/guac_de_la_costa"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_16"
            android:layout_toEndOf="@id/tvTypeTwo" />

        <TextView
            android:id="@+id/tvSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_toRightOf="@id/tvTypeTwo"
            android:layout_below="@id/tvTypeTwo"
            android:padding="@dimen/padding_04"
            android:text="@string/Rs"
            android:layout_marginLeft="@dimen/margin_04"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_16"
            android:layout_toEndOf="@id/tvTypeTwo"
            android:layout_marginStart="@dimen/margin_04" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_toRightOf="@id/tvSymbol"
            android:layout_below="@id/tvTypeTwo"
            android:padding="@dimen/padding_04"
            android:text="@string/_7"
            android:layout_marginLeft="@dimen/margin_04"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_16"
            android:layout_toEndOf="@id/tvSymbol"
            android:layout_marginStart="@dimen/margin_04" />

    </RelativeLayout>




</LinearLayout>
