<?xml version="1.0" encoding="utf-8"?>


    <androidx.core.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/starter"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintLeft_toRightOf="@id/guideline2"
                app:layout_constraintRight_toLeftOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItems"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_04"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/tvCategory"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/tvShowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/show_more"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.99"
                app:layout_constraintLeft_toRightOf="@id/guideline2"
                app:layout_constraintRight_toLeftOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/rvItems" />

            <TextView
                android:id="@+id/tvDeliveryOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/delivery_options"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintLeft_toRightOf="@id/guideline2"
                app:layout_constraintRight_toLeftOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/tvShowMore" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_04"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintLeft_toRightOf="@id/guideline2"
                app:layout_constraintRight_toLeftOf="@id/guideline1"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/tvDeliveryOptions">

                <LinearLayout
                    android:id="@+id/llDine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDineIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_alert"
                        android:drawablePadding="@dimen/margin_04"
                        android:drawableTint="@android:color/black"
                        android:gravity="center"
                        android:text="@string/dine_in" />

                    <CheckBox
                        android:id="@+id/chkDinIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_04"
                        android:checked="true" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTake"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTakeAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_logout"
                        android:drawablePadding="@dimen/margin_04"
                        android:drawableTint="@android:color/black"
                        android:gravity="center"
                        android:text="@string/take_away" />

                    <CheckBox
                        android:id="@+id/chkTakeAway"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_04" />

                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

